--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -33,7 +33,8 @@ body {
   padding: 20px 0 !important;
 	text-align: center;
   margin-bottom: 0 !important;
-  background-image: url('../assets/blackboard-background.png');
+  background-image: url('../assets/american-flag-eagle.jpg');
+  background-size: cover;
 }
 
 .jumbo-top h1 {
