(refactor) comment icon to idea/lightbulb icon
Changes icon to be relevant to its usage, changes css styling to
affect the new icon

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -102,8 +102,8 @@ i.fa-sort-asc:active, i.fa-sort-desc:active {
   padding-bottom: 15px;
 }
 
-i.fa-comments {
-  font-size: 30px;
+i.fa-lightbulb-o {
+  font-size: 35px;
 }
 
 i.fa-comments:hover {
