--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -10,12 +10,12 @@ body {
 
 .login-failure {
   background-color: red;
+  color: white;
   font-family: 'Lato', sans-serif !important;
   font-size: 30px;
   padding-top: 5px;
   padding-bottom: 5px;
   margin-bottom: 20px;
-  border: 2px solid #a1a1a1;
   border-radius: 25px;
 }
 
