--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -3,6 +3,12 @@
   display: none !important;
 }
 
+.no-votes {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 body {
   font-family: 'Lato', sans-serif !important;
   padding-top: 50px;
