--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -260,9 +260,11 @@ input.form-description-control {
 }
 
 img.logo-large {
-  width: 60%;
-  margin-top: 25%;
-  margin-bottom: 5%;
+  width: 103%;
+  margin-top: 15%;
+  margin-bottom: 9%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .sign-up-here {
